# VocalID

./: .gitignore  LISENCE  README.md  dummy_model.pkl  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
api/: app.py
examples/: train_example.py  verify_example.py
src/vocalid/: audio_utils.py  cli.py  config.py  embeddings.py  trainer.py  verifier.py
tests/: conftest.py  test_cli.py  test_embeddings.py  test_trainer.py  test_verifier.py
