[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalid"
version = "0.2.0"
description = "VocalID is an open-source Python library for voice authentication using ECAPA-TDNN speaker embeddings. Train, evaluate, and verify speaker identity from audio files or live microphone input to use voice as biometric to unlock apps, applications and systems."

authors = [{name="Muhammad Khubaib Ahmad", email="khubaib0.1ai@gmail.com"}]
license = {text="MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchaudio",
    "speechbrain",
    "scikit-learn",
    "joblib",
    "sounddevice",
    "numpy",
    "fastapi",
    "uvicorn",
    "torchcodec",
    "sounddevice"
]
keywords = ["voice-verification", "ecapa-tdnn", "ml", "speech"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
   
[project.optional-dependencies]
test = [
    "pytest",
]

[tool.pytest.ini_options]
python_files = "test_*.py"

[project.scripts]
voice-verify = "vocalid.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["vocalid*"]
exclude = ["tests*", "api*"]